hard-gists/f8b86d001a367aa7dde1ab6b587246b5/run.log
=== Docker Run Log for f8b86d001a367aa7dde1ab6b587246b5 ===
Started at: Mi 29. Okt 21:29:52 CET 2025

[2025-10-29 21:29:53] START: Running container for f8b86d001a367aa7dde1ab6b587246b5
[2025-10-29 21:29:53] SUCCESS: Container c72cd9c0a9b868c0afc0db70daad30f2f3e59c2f280494e8556987f3349237e9 started for f8b86d001a367aa7dde1ab6b587246b5
=== Container logs for f8b86d001a367aa7dde1ab6b587246b5 ===
  File "/snippet.py", line 186
    print "{} s to make model".format(duration)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for f8b86d001a367aa7dde1ab6b587246b5 ===
[2025-10-29 21:29:55] INFO: Container c72cd9c0a9b868c0afc0db70daad30f2f3e59c2f280494e8556987f3349237e9 has stopped
